--- a/app/src/main/res/drawable/buy_car_icon.xml
+++ b/app/src/main/res/drawable/buy_car_icon.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="71dp"
-    android:height="71dp"
+    android:width="50dp"
+    android:height="50dp"
     android:viewportWidth="71"
     android:viewportHeight="71">
   <path
@@ -11,8 +11,8 @@
       android:strokeLineCap="round"/>
   <path
       android:pathData="M29.924,60.311m-4.305,0a4.305,4.305 0,1 1,8.609 0a4.305,4.305 0,1 1,-8.609 0"
-      android:fillColor="#DF1463"/>
+      android:fillColor="#FFFFFF"/>
   <path
       android:pathData="M50.012,60.311m-4.305,0a4.305,4.305 0,1 1,8.609 0a4.305,4.305 0,1 1,-8.609 0"
-      android:fillColor="#DF1463"/>
+      android:fillColor="#FFFFFF"/>
 </vector>
