--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,9 +59,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:hint="@string/password"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="10dp"
             android:background="@android:color/transparent"
+            android:hint="@string/password"
             tools:ignore="TouchTargetSizeCheck">
 
 
