--- a/app/src/main/res/layout/activity_search_view.xml
+++ b/app/src/main/res/layout/activity_search_view.xml
@@ -67,7 +67,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <SearchView
+        <androidx.appcompat.widget.SearchView
             android:id="@+id/searchView"
             android:layout_width="0dp"
             android:layout_height="50dp"
